--- a/front page.html
+++ b/front page.html
@@ -55,7 +55,6 @@
             padding: 10px;
             font-size: 20px;
             text-decoration: none;
-            color: black;
             display: block;
         }
         .menu a:hover {
@@ -67,7 +66,6 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.5);
             display: none;
         }
         .overlay.active {
@@ -80,7 +78,7 @@
             width: 100%;
             text-align: center;
             position: relative;
-            z-index: 1;
+            z-index: 0;
         }
         .search-bar input {
             padding: 10px;
@@ -97,8 +95,8 @@
         .deals-header {
             display: flex;
             justify-content: space-between;
-            align-items: center;
-            padding: 10px;
+            align-items: absolute ;
+            padding: 20px;
         }
         .deals-header h2 {
             margin: 0;
