--- a/front page.html
+++ b/front page.html
@@ -3,131 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Desktop UI Clone</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #3b0a06;
-            color: white;
-        }
-        .navbar {
-            position: relative;
-            background-color: #d34524;
-            padding: 15px;
-            text-align: center;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .menu-icon {
-            font-size: 24px;
-            cursor: pointer;
-        }
-        .logo {
-            margin-left: 10px;
-            font-size: 20px;
-            font-weight: bold;
-        }
-        .icons {
-            margin-left: auto;
-            font-size: 30px;
-            display: flex;
-            gap: 20px;
-        }
-        .menu {
-            position: absolute;
-            top: 60px;
-            left: 0;
-            width: 100%;
-            background-color: #f3d59b;
-            max-height: 0;
-            overflow: hidden;
-            transition: max-height 0.3s ease-in-out;
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-        }
-        .menu.active {
-            max-height: 400px;
-        }
-        .menu a {
-            padding: 10px;
-            font-size: 20px;
-            text-decoration: none;
-            color: black;
-            display: block;
-        }
-        .menu a:hover {
-            background-color: #e8a064;
-        }
-        .overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            display: none;
-        }
-        .overlay.active {
-            display: block;
-        }
-        .view-all {
-            color: red;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .search-bar {
-            display: none;
-            background-color: #d34524;
-            padding: 10px;
-            width: 100%;
-            text-align: center;
-            position: relative;
-            z-index: 0;
-        }
-        .search-bar input {
-            padding: 10px;
-            width: 80%;
-            font-size: 16px;
-            border: none;
-            border-radius: 5px;
-        }
-        .section {
-            padding: 30px;
-            text-align: center;
-        }
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px;
-        }
-        .header h2 {
-            margin: 0;
-        }
-        /* Horizontal Scroll Styling */
-        .container {
-            display: flex;
-            overflow-x: auto;
-            white-space: nowrap;
-            gap: 10px;
-            padding: 10px;
-            scroll-behavior: smooth;
-        }
-        .item {
-            flex-shrink: 0; /* Prevent shrinking */
-        }
-        .item img {
-            width: 200px;
-            height: 200px;
-            border-radius: 10px;
-        }
-        /* Hide Scrollbar */
-        .container::-webkit-scrollbar {
-            display: none;
-        }
-    </style>
 </head>
 <body>
     <div class="navbar">
