signup page and conent again

--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Sign Up</title>
+    <title>Login</title>
 </head>
 <body>
     <div class="body1">
@@ -34,7 +34,7 @@
         <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
     
     
-        <div class="container1">
+        <div class="container1x">
             <h2>Welcome Back!</h2>
             <input type="email" placeholder="Enter your email">
             <input type="password" placeholder="Enter your password">
@@ -42,7 +42,7 @@
             <p>Or With</p>
             <div class="social-login">Login with Facebook</div>
             <div class="social-login" style="background:#db4437;">Login with Google</div>
-            <p>Don't have an account? <a href="signin.html" style="color:yellow;">Sign Up</a></p>
+            <p>Don't have an account? <a href="signup.html" style="color:yellow;">Sign Up</a></p>
         </div>
     </div>
 
