fixed calling function for login javascript

--- a/login.html
+++ b/login.html
@@ -43,8 +43,8 @@
         <div class="container1">
             <!-- Actual login -->
             <h2>Welcome Back!</h2>
-            <input type="email" placeholder="Enter your email">
-            <input type="password" placeholder="Enter your password">
+            <input type="email" id="email" placeholder="Enter your email">
+            <input type="password" id="password" placeholder="Enter your password">
             <button class="login-btn" onclick="login()">Login</button>
             
             <p>Or With</p>
@@ -77,5 +77,6 @@
         });
 });
     </script>
+
 </body>
 </html>
