Completed signup feature and linked to restdb API

--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Sign Up</title>
+    <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <div class="body2">
@@ -71,9 +73,9 @@
             }
 
             let userData = {
-                username: Username,
-                email: Email,
-                password: Password
+                Username: username,
+                Email: email,
+                Password: password
             };
 
             let settings = {
