change the format of profile

--- a/front page.html
+++ b/front page.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="menu" id="menu">
-        <a href="#">Home</a>
+        <a href="">Home</a>
         <a href="#">Deals</a>
         <a href="#">Mouse</a>
         <a href="#">Keyboard</a>
@@ -32,6 +32,8 @@
     </div>
 
     <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
+
+    <div id="product-sections"></div>
 
     <div id="product-sections"></div>
 
