--- a/profile.html
+++ b/profile.html
@@ -6,117 +6,8 @@
     <title>Profile Dashboard</title>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <style>
-
-
-        .profile-card {
-            background: rgba(255, 255, 255, 0.1);
-            padding: 20px;
-            border-radius: 15px;
-            margin-top: 20px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-        }
-
-        .profile-image {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 10px;
-        }
-
-        .pfp {
-            background: white;
-            color: black;
-            font-size: 22px;
-            font-weight: bold;
-            width: 60px;
-            height: 60px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 50%;
-        }
-
-        h2 {
-            font-size: 22px;
-            margin: 5px 0;
-        }
-
-        p {
-            font-size: 14px;
-            opacity: 0.8;
-        }
-
-        .points-info {
-            display: flex;
-            justify-content: space-between;
-            margin: 15px 0;
-        }
-
-        .points, .discount {
-            flex: 1;
-            background: rgba(255, 255, 255, 0.2);
-            padding: 10px;
-            border-radius: 10px;
-            margin: 5px;
-            font-size: 14px;
-        }
-
-        .points i, .discount i {
-            font-size: 20px;
-            margin-bottom: 5px;
-        }
-
-        span {
-            font-size: 12px;
-            opacity: 0.7;
-        }
-
-        .shop-btn {
-            background: #FFAA00;
-            color: black;
-            font-weight: bold;
-            padding: 10px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            margin-top: 10px;
-            width: 100%;
-        }
-
-        .shop-btn:hover {
-            background: #FFCC33;
-        }
-
-        .menu-list {
-            margin-top: 20px;
-        }
-
-        .menu-item {
-            background: rgba(255, 255, 255, 0.1);
-            padding: 15px;
-            border-radius: 10px;
-            margin: 10px 0;
-            font-size: 16px;
-            cursor: pointer;
-        }
-
-        .menu-item i {
-            margin-right: 10px;
-        }
-
-        .extra-links {
-            margin-top: 20px;
-            font-size: 14px;
-            opacity: 0.8;
-            cursor: pointer;
-        }
-
-        .toggle {
-            float: right;
-        }
-    </style>
 </head>
-<body>
+<body>          
 
     <div class="navbar">
         <span class="menu-icon" onclick="toggleMenu()">&#9776;</span>
@@ -175,6 +66,6 @@
         <p>About us <span class="toggle">+</span></p>
         <p>Contact</p>
     </div>
-
+    <script src="sc2.js"></script>
 </body>
 </html>
