--- a/front page.html
+++ b/front page.html
@@ -22,13 +22,12 @@
     </div>
 
     <div class="menu" id="menu">
-        <a href="">Home</a>
-        <a href="#">Deals</a>
-        <a href="#">Mouse</a>
-        <a href="#">Keyboard</a>
-        <a href="#">Headphone</a>
-        <a href="#">Microphone</a>
-        <a href="#">Contact Us</a>
+        <a href="index.html">Home</a>
+        <a href="category.html?category=Deals">Deals</a>
+        <a href="category.html?category=Mouse">Mouse</a>
+        <a href="category.html?category=Keyboard">Keyboard</a>
+        <a href="category.html?category=Headphone">Headphone</a>
+        <a href="category.html?category=Microphone">Microphone</a>
     </div>
     
 
