--- a/itemdetail.html
+++ b/itemdetail.html
@@ -3,20 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Detail</title>
+    <title>Product Store</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="navbar">
         <span class="menu-icon" onclick="toggleMenu()">&#9776;</span>
-        <span class="logo">DeskTop</span>
+        <span class="logo">Desktop Store</span>
         <div class="icons">
-            <span>🔍</span>
+            <span onclick="toggleSearch()">🔍</span>
             <span>👤</span>
-            <span>🛒 <span class="cart-count">0</span></span>
+            <span>🛒</span>
         </div>
     </div>
 
+    <div class="search-bar" id="search-bar">
+        <input type="text" placeholder="Search...">
+    </div>
+
+    <div class="menu" id="menu">
+        <a href="index.html">Home</a>
+        <a href="category.html?category=Deals">Deals</a>
+        <a href="category.html?category=Mouse">Mouse</a>
+        <a href="category.htl?category=Keyboard">Keyboard</a>
+        <a href="category.html?category=Headmphone">Headphone</a>
+        <a href="category.html?category=Microphone">Microphone</a>
+    </div>
     <!-- Product Detail Section -->
     <div class="product-detail">
         <div class="main-image">
