--- a/profile.html
+++ b/profile.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile Dashboard</title>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <title>Product Store</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>          
-
+<body>
     <div class="navbar">
         <span class="menu-icon" onclick="toggleMenu()">&#9776;</span>
         <span class="logo">Desktop Store</span>
@@ -24,15 +22,13 @@
     </div>
 
     <div class="menu" id="menu">
-        <a href="">Home</a>
-        <a href="#">Deals</a>
-        <a href="#">Mouse</a>
-        <a href="#">Keyboard</a>
-        <a href="#">Headphone</a>
-        <a href="#">Microphone</a>
-        <a href="#">Contact Us</a>
+        <a href="index.html">Home</a>
+        <a href="category.html?category=Deals">Deals</a>
+        <a href="category.html?category=Mouse">Mouse</a>
+        <a href="category.html?category=Keyboard">Keyboard</a>
+        <a href="category.html?category=Headphone">Headphone</a>
+        <a href="category.html?category=Microphone">Microphone</a>
     </div>
-
     <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
 
     <div class="profile-card">
