change settings and css files

--- a/Category.html
+++ b/Category.html
@@ -12,8 +12,8 @@
         <span class="logo">Desktop Store</span>
         <div class="icons">
             <span onclick="toggleSearch()">🔍</span>
-            <span>👤</span>
-            <span>🛒</span>
+            <a href="login.html" class="cart-icon">👤</a>
+            <a href="kart.html" class="cart-icon">🛒</a>
         </div>
     </div>
 
