--- a/itemdetail.html
+++ b/itemdetail.html
@@ -13,7 +13,7 @@
         <span class="logo">Desktop Store</span>
         <div class="icons">
             <span onclick="toggleSearch()">🔍</span>
-            <span>👤</span>
+            <a href="login.html" class="cart-icon">👤</a>
             <a href="kart.html" class="cart-icon">🛒</a>
         </div>
     </div>
@@ -45,7 +45,7 @@
             <h3>Description</h3>
             <p id="product-description">Product description will be here.</p>
         </div>
-    </div>
+    </div>   
 
     <script src="sc2.js"></script>
 
