--- a/login.html
+++ b/login.html
@@ -12,11 +12,10 @@
         <span class="logo">Desktop Store</span>
         <div class="icons">
             <span onclick="toggleSearch()">🔍</span>
-            <span>👤</span>
-            <span>🛒</span>
+            <a href="login.html" class="cart-icon">👤</a>
+            <a href="kart.html" class="cart-icon">🛒</a>
         </div>
     </div>
-
     <div class="search-bar" id="search-bar">
         <input type="text" placeholder="Search...">
     </div>
