Removed unnecessary images and fixed page names

--- a/kart.html
+++ b/kart.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="cart-actions">
-            <button class="checkout-btn" onclick="window.location.href='payment.html'">Checkout</button>
+            <button class="checkout-btn" onclick="window.location.href='paymentpage.html'">Checkout</button>
             <button class="continue-btn" onclick="window.location.href='index.html'">Continue Shopping</button>
         </div>
 
