--- a/paymentpage.html
+++ b/paymentpage.html
@@ -161,7 +161,7 @@
                 return;
             }
 
-            window.location.href = 'receipt.html';
+            window.location.href = 'check out.html';
         }
     </script>
 
