--- a/Category.html
+++ b/Category.html
@@ -28,6 +28,7 @@
         <a href="category.html?category=Keyboard">Keyboard</a>
         <a href="category.html?category=Headphone">Headphone</a>
         <a href="category.html?category=Microphone">Microphone</a>
+        <a href="3df.html">3d galary</a>
     </div>
 
     <h1 class="category-title">Loading Category...</h1>
