--- a/kart.html
+++ b/kart.html
@@ -16,6 +16,19 @@
             <a href="kart.html" class="cart-icon">🛒</a>
         </div>
     </div>
+    <div class="search-bar" id="search-bar">
+        <input type="text" placeholder="Search...">
+    </div>
+
+    <div class="menu" id="menu">
+        <a href="index.html">Home</a>
+        <a href="category.html?category=Deals">Deals</a>
+        <a href="category.html?category=Mouse">Mouse</a>
+        <a href="category.html?category=Keyboard">Keyboard</a>
+        <a href="category.html?category=Headphone">Headphone</a>
+        <a href="category.html?category=Microphone">Microphone</a>
+        <a href="3df.html">3d galary</a>
+    </div>
 
     <div class="cart-container">
         <h2>My Cart</h2>
